--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
               <li class="ul_item">
                 <img src="./images/css-icon.png" alt="CSS" /><span>CSS</span>
               </li>
+              <li class="ul_item">
+                <img src="./images/ruby.png" alt="HTML" /><span>RUBY</span>
+              </li>
             </div>
           </ul>
           <ul class="about_ul">
@@ -252,7 +255,7 @@
                 required
               ></textarea>
               <small id="form-info"></small>
-              <button type="submit" class="btn_submit">Get It Touch</button>
+              <button type="submit" class="btn_submit">Get In Touch</button>
             </fieldset>
           </form>
         </div>
