Add link to medium

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 /></a>
               </li>
               <li class="social_link">
-                <a href="mailto:nwakauc1@gmail.com"
+                <a href="https://medium.com/@nwakauc1"
                   ><img class="social_icon" src="./images/m.svg" alt="M"
                 /></a>
               </li>
@@ -96,7 +96,7 @@
                 /></a>
               </li>
               <li class="social_link">
-                <a href="#"
+                <a href="https://venture.angellist.com/v/uchechi-nwaka/i/uchechi-nwaka/portfolio/dashboard"
                   ><img class="social_icon" src="./images/doit.svg" alt="Diot"
                 /></a>
               </li>
@@ -141,7 +141,7 @@
               /></a>
             </li>
             <li class="social_link">
-              <a href="#"
+              <a href="https://medium.com/@nwakauc1"
                 ><img class="social_icon" src="./images/m.svg" alt="M"
               /></a>
             </li>
@@ -154,7 +154,7 @@
               /></a>
             </li>
             <li class="social_link">
-              <a href="#"
+              <a href="https://venture.angellist.com/v/uchechi-nwaka/i/uchechi-nwaka/portfolio/dashboard"
                 ><img class="social_icon" src="./images/doit.svg" alt="Diot"
               /></a>
             </li>
