add link to wellfound

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 /></a>
               </li>
               <li class="social_link">
-                <a href="https://venture.angellist.com/v/uchechi-nwaka/i/uchechi-nwaka/portfolio/dashboard"
+                <a href="https://wellfound.com/u/uchechi-nwaka"
                   ><img class="social_icon" src="./images/doit.svg" alt="Diot"
                 /></a>
               </li>
@@ -163,7 +163,7 @@
               /></a>
             </li>
             <li class="social_link">
-              <a href="https://venture.angellist.com/v/uchechi-nwaka/i/uchechi-nwaka/portfolio/dashboard"
+              <a href="https://wellfound.com/u/uchechi-nwaka"
                 ><img class="social_icon" src="./images/doit.svg" alt="Diot"
               /></a>
             </li>
@@ -204,12 +204,12 @@
             <ul class="tech-toolss tools-ul">
             </li>
             <li class="listimg">
-              <img src="/img/react.png" alt="css" /><a href="#"
+              <img src="./images/react.png" alt="css" /><a href="#"
                 >React</a
               >
             </li>
             <li class="listimg">
-              <img src="/img/rub.png" alt="css" /><a href="#"
+              <img src="./images/rub.png" alt="css" /><a href="#"
                 >Ruby <br> on Rails</a
               >
             </li>
@@ -219,24 +219,24 @@
             <summary>Skills</summary>
             <ul class="skills-tools tools-ul">
               <li class="listimg">
-                <img src="/img/collaboration.png" alt="javascript" /><a
+                <img src="./images/collaboration.png" alt="javascript" /><a
                   href="#"
                   >Collaboration</a
                 >
               </li>
               <li class="listimg">
-                <img src="/img/leader.png" alt="html" /><a href="#"
+                <img src="./images/leader.png" alt="html" /><a href="#"
                   >Leadership</a
                 >
               </li>
               <li class="listimg">
-                <img src="/img/empathy.png" alt="css" /><a href="#"
+                <img src="./images/empathy.png" alt="css" /><a href="#"
                   >Teamwork</a
                 >
               </li>
               <li class="listimg">
-                <img src="/img/patience.png" alt="css" /><a href="#"
-                  >Perseverance</a
+                <img src="./images/patience.png" alt="css" /><a href="#"
+                  >Project Management</a
                 >
               </li>
             </ul>
