--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </li>
           </ul>
           <div class="action">
-            <a href="https://drive.google.com/file/d/1apnSWV0Gb0nZQnGToL2ylvuB_tJI5r8D/view?usp=sharing" class="atn_btn">Get my resume</a>
+            <a href="https://docs.google.com/document/d/1Odfw_IrVCHz9V5QHjyYr8OM8vcQ6l_dL_nH7i6h9Xuw/edit?usp=sharing" class="atn_btn">Get my resume</a>
           </div>
         </div>
         <div class="about-framework">
