--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 required
               ></textarea>
               <small id="form-info"></small>
-              <button type="submit" class="btn_submit">Get In Touch</button>
+              <button type="submit" class="btn_submit">Get in Touch</button>
             </fieldset>
           </form>
         </div>
