--- a/index.html
+++ b/index.html
@@ -197,20 +197,43 @@
               <li class="ul_item">
                 <img src="./images/ruby.png" alt="HTML" /><span>RUBY</span>
               </li>
+              <li class="ul_item">
+                <img src="./images/c-sharp-c-icon-1822x2048-wuf3ijab.png" alt="C#" /><span>C#</span>
+              </li>
             </div>
           </ul>
           <details class="tech-toolss tools-ul" id="2">
-            <summary>Framework</summary>
+            <summary>Frameworks</summary>
             <ul class="tech-toolss tools-ul">
             </li>
             <li class="listimg">
               <img src="./images/react.png" alt="css" /><a href="#"
-                >React</a
+                ></a
+              >
+            </li>
+            <li class="listimg">
+              <img src="./images/download (2).png" alt=".net" /><a href="#"
+                ></a
               >
             </li>
             <li class="listimg">
               <img src="./images/rub.png" alt="css" /><a href="#"
-                >Ruby <br> on Rails</a
+                ></a
+              >
+            </li>
+            <li class="listimg">
+              <img src="./images/images.jpeg" alt=".net" /><a href="#"
+                ></a
+              >
+            </li>
+            <li class="listimg">
+              <img src="./images/download.png" alt="Angular" /><a href="#"
+                ></a
+              >
+            </li>
+            <li class="listimg">
+              <img src="./images/download (1).png" alt="nextjs" /><a href="#"
+                ></a
               >
             </li>
             </ul>
